# zig-go

./: .gitignore  CMakeLists.txt  README.md  build.py  build.zig  build.zig.zon  loader.c  loader.h
lib/win32/: dl.lib
multiply/: CMakeLists.txt  go.mod  main.go
src/: loader.c  loader.h  main.zig
sum/: CMakeLists.txt  go.mod  main.go
